@@ -1,3 +1,9 @@
+2008-08-15  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime.el (slime-popup-buffer-quit): If not kill, then at least
+	bury the buffer.
+	(slime-list-compiler-notes): Shrink the compiler-notes window.
+
 2008-08-14  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	If another frame is already displaying a REPL, `C-c C-z' will now
